# MSYS2-ext-packages

check/: PKGBUILD  check-0.12-msys2.patch
efxc2/: PKGBUILD
json-c/: PKGBUILD
libcss/: CMakeLists.txt  PKGBUILD
libdom/: CMakeLists.txt  PKGBUILD  intypes_include.patch
libhubbub/: CMakeLists.txt  PKGBUILD  fix-test-tokenizer2.patch
libnsutils/: CMakeLists.txt  PKGBUILD
libparserutils/: CMakeLists.txt  PKGBUILD  test-htonl-ntohl.patch
libsvgtiny/: CMakeLists.txt  PKGBUILD
libwapcaplet/: CMakeLists.txt  PKGBUILD
nsgenbind/: CMakeLists.txt  PKGBUILD  print-format.patch
